--- a/schedule-with-rdf-types.ipynb
+++ b/schedule-with-rdf-types.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -40,61 +40,26 @@
      "output_type": "stream",
      "text": [
       "_:1 <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Lecture> .\n",
-      "_:1 <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Lecture> .\n",
-      "_:1 <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Lecture> .\n",
-      "_:1 <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Lecture> .\n",
       "<http://dilab77.ionio.gr/swp/c17gram/resource/Κομιανός> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Teacher> .\n",
-      "_:1 <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Lecture> .\n",
       "<http://dilab77.ionio.gr/swp/c17gram/resource/Ψυχαγωγικό%20Λογισμικό> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Course> .\n",
-      "_:1 <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Lecture> .\n",
-      "_:2 <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Lecture> .\n",
-      "_:2 <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Lecture> .\n",
-      "_:2 <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Lecture> .\n",
       "_:2 <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Lecture> .\n",
       "<http://dilab77.ionio.gr/swp/c17gram/resource/Τσόχου> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Teacher> .\n",
-      "_:2 <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Lecture> .\n",
       "<http://dilab77.ionio.gr/swp/c17gram/resource/Ασφάλεια%20Πληροφοριακών%20Συστημάτων> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Course> .\n",
-      "_:2 <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Lecture> .\n",
-      "_:3 <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Lecture> .\n",
-      "_:3 <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Lecture> .\n",
-      "_:3 <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Lecture> .\n",
       "_:3 <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Lecture> .\n",
       "<http://dilab77.ionio.gr/swp/c17gram/resource/Στεφανιδάκης> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Teacher> .\n",
-      "_:3 <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Lecture> .\n",
       "<http://dilab77.ionio.gr/swp/c17gram/resource/Προγραμματισμός%20Σημασιολογικού%20Ιστού> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Course> .\n",
-      "_:3 <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Lecture> .\n",
-      "_:4 <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Lecture> .\n",
-      "_:4 <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Lecture> .\n",
-      "_:4 <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Lecture> .\n",
       "_:4 <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Lecture> .\n",
       "<http://dilab77.ionio.gr/swp/c17gram/resource/Βλάμος> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Teacher> .\n",
-      "_:4 <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Lecture> .\n",
       "<http://dilab77.ionio.gr/swp/c17gram/resource/Βιοπληροφορική> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Course> .\n",
-      "_:4 <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Lecture> .\n",
-      "_:5 <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Lecture> .\n",
-      "_:5 <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Lecture> .\n",
-      "_:5 <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Lecture> .\n",
       "_:5 <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Lecture> .\n",
       "<http://dilab77.ionio.gr/swp/c17gram/resource/Πατέλη> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Teacher> .\n",
-      "_:5 <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Lecture> .\n",
       "<http://dilab77.ionio.gr/swp/c17gram/resource/Ηλεκτρονική%20Επιχειρηματικότητα> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Course> .\n",
-      "_:5 <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Lecture> .\n",
-      "_:6 <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Lecture> .\n",
-      "_:6 <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Lecture> .\n",
-      "_:6 <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Lecture> .\n",
       "_:6 <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Lecture> .\n",
       "<http://dilab77.ionio.gr/swp/c17gram/resource/Αυλωνίτης> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Teacher> .\n",
-      "_:6 <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Lecture> .\n",
       "<http://dilab77.ionio.gr/swp/c17gram/resource/Προσομοίωση%20Μοντελοποίηση> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Course> .\n",
-      "_:6 <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Lecture> .\n",
-      "_:7 <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Lecture> .\n",
-      "_:7 <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Lecture> .\n",
-      "_:7 <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Lecture> .\n",
       "_:7 <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Lecture> .\n",
       "<http://dilab77.ionio.gr/swp/c17gram/resource/Κερμανίδου> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Teacher> .\n",
-      "_:7 <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Lecture> .\n",
-      "<http://dilab77.ionio.gr/swp/c17gram/resource/Τεχνητή%20Νοημοσύνη> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Course> .\n",
-      "_:7 <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Lecture> .\n"
+      "<http://dilab77.ionio.gr/swp/c17gram/resource/Τεχνητή%20Νοημοσύνη> <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://dilab77.ionio.gr/swp/c17gram/vocab#Course> .\n"
      ]
     }
    ],
@@ -108,9 +73,12 @@
     "            uri.append(row)\n",
     "triple=[]\n",
     "with open('schedule-data.nt','w') as ofp:\n",
+    "    visited=set()\n",
     "    for s,p,o in uri:\n",
-    "        print('{} {} {} .'.format(s,'<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>','<http://dilab77.ionio.gr/swp/c17gram/vocab#Lecture>'))\n",
-    "        ofp.write('{} {} {} . \\n'.format(s,'<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>','<http://dilab77.ionio.gr/swp/c17gram/vocab#Lecture>'))\n",
+    "        if s not in visited:\n",
+    "            visited.add(s)\n",
+    "            print('{} {} {} .'.format(s,'<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>','<http://dilab77.ionio.gr/swp/c17gram/vocab#Lecture>'))\n",
+    "            ofp.write('{} {} {} . \\n'.format(s,'<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>','<http://dilab77.ionio.gr/swp/c17gram/vocab#Lecture>'))\n",
     "        if o.startswith('http:'):\n",
     "            o='<'+o+'>'\n",
     "        p='<'+p+'>'   \n",
@@ -120,14 +88,20 @@
     "            o='\"'+o+'\"'\n",
     "        triple.append((s,p,o))\n",
     "        if p in ('<http://dilab77.ionio.gr/swp/c17gram/vocab#%20Καθηγητής%20%20>'):\n",
-    "            print('{} {} {} .'.format(o,'<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>','<http://dilab77.ionio.gr/swp/c17gram/vocab#Teacher>'))\n",
-    "            ofp.write('{} {} {} . \\n'.format(o,'<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>','<http://dilab77.ionio.gr/swp/c17gram/vocab#Teacher>'))\n",
+    "            if o not in visited:\n",
+    "                visited.add(o)\n",
+    "                print('{} {} {} .'.format(o,'<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>','<http://dilab77.ionio.gr/swp/c17gram/vocab#Teacher>'))\n",
+    "                ofp.write('{} {} {} . \\n'.format(o,'<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>','<http://dilab77.ionio.gr/swp/c17gram/vocab#Teacher>'))\n",
     "        if p in ('<http://dilab77.ionio.gr/swp/c17gram/vocab#Άιθουσα>'): \n",
-    "            print('{} {} {} .'.format(o,'<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>','<http://dilab77.ionio.gr/swp/c17gram/vocab#Room>'))\n",
-    "            ofp.write('{} {} {} . \\n'.format(o,'<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>','<http://dilab77.ionio.gr/swp/p12kast/vocab#Room>'))\n",
+    "            if o not in visited:\n",
+    "                visited.add(o)\n",
+    "                print('{} {} {} .'.format(o,'<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>','<http://dilab77.ionio.gr/swp/c17gram/vocab#Room>'))\n",
+    "                ofp.write('{} {} {} . \\n'.format(o,'<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>','<http://dilab77.ionio.gr/swp/p12kast/vocab#Room>'))\n",
     "        if p in ('<http://dilab77.ionio.gr/swp/c17gram/vocab#Μάθημα%20>'):\n",
-    "            print('{} {} {} .'.format(o,'<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>','<http://dilab77.ionio.gr/swp/c17gram/vocab#Course>'))\n",
-    "            ofp.write('{} {} {} . \\n'.format(o,'<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>','<http://dilab77.ionio.gr/swp/c17gram/vocab#Course>'))\n",
+    "            if o not in visited:\n",
+    "                visited.add(o)\n",
+    "                print('{} {} {} .'.format(o,'<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>','<http://dilab77.ionio.gr/swp/c17gram/vocab#Course>'))\n",
+    "                ofp.write('{} {} {} . \\n'.format(o,'<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>','<http://dilab77.ionio.gr/swp/c17gram/vocab#Course>'))\n",
     "        \n",
     "\n"
    ]
@@ -237,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -311,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true,
     "deletable": true,
